# hfutils

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/skills/add-architecture/: SKILL.md
src/hfutils/: __init__.py  cli.py  errors.py  events.py  runner.py
src/hfutils/commands/: civitai.py  comfyui.py  convert.py  inspect.py  inspect_cmd.py  merge.py  scan.py
src/hfutils/formats/: safetensors.py
src/hfutils/inspect/: architecture.py  common.py  directory.py  gguf.py  safetensors.py  summary.py  views.py  walker.py
src/hfutils/io/: fs.py  progress.py
src/hfutils/layouts/: comfyui.py  plan.py
src/hfutils/providers/: civitai.py  download.py
src/hfutils/sources/: detect.py  types.py
tests/: conftest.py  test_accuracy.py  test_architecture.py  test_civitai.py  test_cli_hygiene.py  test_comfyui.py  test_convert.py  test_convert_comfyui.py  test_convert_single.py  test_download.py  test_errors.py  test_events.py  test_formats_safetensors.py  test_inspect_directory.py  test_inspect_gguf.py  test_inspect_recursive.py  test_inspect_safetensors.py  test_inspect_views.py  test_inspect_walker.py  test_layouts_comfyui.py  test_layouts_plan.py  test_merge.py  test_mixed_pipeline.py  test_preflight_and_warnings.py  test_public_api.py  test_runner.py  test_scan.py  test_sources_detect.py  test_stream_merge_properties.py  test_summary.py
