[project]
name = "hfutils"
version = "0.2.0"
description = "Local model file toolkit: inspect, merge, and scan safetensors/GGUF files"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Fred Bliss"}]
dependencies = [
    "typer-slim>=0.21",
    "orjson>=3.10",
    "rich>=13.0",
]

[project.scripts]
hfutils = "hfutils.cli:app"

[project.optional-dependencies]
merge = ["safetensors[torch]"]
all = ["safetensors[torch]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "safetensors[torch]>=0.7.0",
    "gguf>=0.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hfutils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
