[project]
name = "hfutils"
version = "0.7.0"
description = "Local model file toolkit"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Fred Bliss"}]
dependencies = [
    "typer>=0.21",
    "orjson>=3.10",
    "rich>=13.0",
    "safetensors",
]

[project.optional-dependencies]
ml = [
    "torch",
    "safetensors[torch]",
]

[project.scripts]
hfutils = "hfutils.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "gguf>=0.18.0",
    "torch",
    "safetensors[torch]",
    "hypothesis>=6.152.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hfutils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
